mixpost-minimal.yaml
---
# Mixpost ultra-minimal sans init containers
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mixpost-minimal
  namespace: mixpost
  labels:
    app: mixpost-minimal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mixpost-minimal
  template:
    metadata:
      labels:
        app: mixpost-minimal
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: applications-pool
      containers:
      - name: mixpost
        image: inovector/mixpost:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
